# bekobrew

./: .gitmodules  .travis.yml  0.1.1  CMakeLists.txt  README.md
patch/: googlemock-CMakeLists.txt.patch
script/: build.sh  install.sh
src/: archive.h  bekobrew.c  bekobrew.h  bekobuild.c  bekobuild.h  cli.c  cli.h  command.c  command.h  common.h  context.c  context.h  eval.c  eval.h  expand.c  expand.h  inline_utils.h  main.c  map.c  node.c  node.h  request.c  request.h  string_map.c  string_map.h  string_utils.h  string_vector.c  string_vector.h  url.c  url.h  vector.c  vector.h  version.h
src/archive/: gz.c
src/command/: help.c  install.c  version.c
src/sub_command/: build.c  help.c  install.c  version.c
test/: archive_test.cpp  bekobuild_test.cpp  bekobuild_test.h  cli_test.cpp  cli_test.h  context_test.cpp  eval_test.cpp  expand_test.cpp  map_test.cpp  map_test.h  node_test.cpp  string_map_test.cpp  string_vector_test.cpp  test_helper.h  url_test.cpp  vector_test.cpp  vector_test.h
test/bekobuild_test/: BEKOBUILD  eval_test.yml  simple_package.yml
test/eval_test/: hello_package.yml  hello_world.yml
test/eval_test/hello/: BEKOBUILD
test/integrated/: 0001_hello.t  helper.sh  run.sh
test/integrated/0001/hello/: BEKOBUILD
test/lib/funopen/: funopen.h
