CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (bekobrew)
SET (VENDOR ${CMAKE_SOURCE_DIR}/vendor)

# curl
FIND_LIBRARY (CURL_LIBRARY NAMES curl)

# libyaml
ADD_SUBDIRECTORY (${VENDOR}/libyaml)
INCLUDE_DIRECTORIES (${VENDOR}/libyaml/include)

# google test
ADD_SUBDIRECTORY (${VENDOR}/googletest)

# bekobrew
FILE (GLOB BEKOBREW_SOURCES src/*.c src/*/*.c)
INCLUDE_DIRECTORIES (src/)
ADD_EXECUTABLE (bekobrew ${BEKOBREW_SOURCES})
ADD_DEPENDENCIES (bekobrew yaml)
TARGET_LINK_LIBRARIES (bekobrew yaml curl)
INSTALL (TARGETS bekobrew RUNTIME DESTINATION bin/)

# testing
FIND_PACKAGE (GTest)
IF (GTEST_FOUND)
  INCLUDE_DIRECTORIES (${GTEST_INCLUDE_DIRS})
  FILE (GLOB TESTING_SOURCES ${BEKOBREW_SOURCES} test/*_test.cpp test/*/*_test.cpp)
  LIST (REMOVE_ITEM TESTING_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.c")
  ADD_EXECUTABLE (run_test ${TESTING_SOURCES})
  TARGET_LINK_LIBRARIES(run_test
    ${GTEST_BOTH_LIBRARIES}
    -pthread
    yaml
    curl
    )
ENDIF (GTEST_FOUND)
